# dprint-plugin-css

./: .gitignore  Cargo.toml  LICENSE  README.md  dprint.json
.github/workflows/: ci.yml
deployment/: latest.json  schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  plugin.wasm  setup.js
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  mod.rs  resolve_config.rs
src/generation/: context.rs  generate.rs  helpers.rs  mod.rs
tests/: test.rs
tests/specs/: comments.txt
tests/specs/Basic/: Basic_All.txt
tests/specs/at-rule/: charset.txt  color_profile.txt  container.txt  counter_style.txt  custom_media.txt  document.txt  font_feature_values.txt  font_palette_values.txt  import.txt  keyframes.txt  media.txt  namespace.txt  nest.txt  page.txt  position_fallback.txt  property.txt  scroll_timeline.txt  supports.txt
tests/specs/selectors/: an_plus_b.txt  attribute.txt  complex.txt  compound.txt  nesting.txt  selectors_pseudo_class.txt
tests/specs/value/: bracket.txt  calc.txt  color.txt  dimension.txt  function.txt  layer.txt  token_with_span.txt
