[package]
name = "dprint-plugin-css"
version = "0.1.0"
edition = "2021"
keywords = ["formatting", "formatter", "css"]
license = "MIT"
description = "CSS formatter for dprint via parcel_css."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
dprint-core = { version = "0.49.0", features = ["formatting"] }
serde = { version = "1.0.88", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
debug-here = "0.2"
dprint-development = "0.5.0"
serde_json = { version = "1.0" }
