[package]
name = "dprint-plugin-css"
version = "0.1.3"
authors = ["disrupted <hi@salomonpopp.me>"]
edition = "2021"
keywords = ["formatting", "formatter", "css"]
license = "MIT"
repository = "https://github.com/disrupted/dprint-plugin-css"
description = "CSS formatter for dprint via Raffia."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
raffia = "0.1.0"
dprint-core = { version = "0.50.0", features = ["formatting"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.5.0"
serde_json = { version = "1.0" }
